...

    <Spinner
        android:id="@+id/o_roleSpinner"
        style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
        android:layout_width="125dp"
...
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="My Profile"
        android:textAlignment="textStart"
        android:textColor="@color/dark_purple"
...
                app:civ_border_color="#FF000000"
                app:civ_border_width="0dp"
                app:layout_constraintBottom_toTopOf="@id/O_profile_nameLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
...

            <ImageView
                android:id="@+id/O_profile_editBtn"
                android:layout_width="54dp"
                android:layout_height="54dp"
...

            <Button
                android:id="@+id/O_profile_uploadImageBtn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
...
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/dark_purple"
                android:text="Upload Image"
                android:textColor="@color/light_purple"
                android:visibility="gone"
...
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/dark_purple"
                android:text="Delete Image"
                android:textColor="@color/light_purple"
                android:visibility="gone"
...
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Name:"
                android:textColor="@color/dark_purple"
                android:textSize="20sp"
...

            <EditText
                android:id="@+id/O_profile_textName"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
...
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Pronouns:"
                android:textColor="@color/dark_purple"
                android:textSize="20sp"
...

            <EditText
                android:id="@+id/O_profile_textPronouns"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
...
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Phone:"
                android:textColor="@color/dark_purple"
                android:textSize="20sp"
...
                app:layout_constraintHorizontal_bias="0.255"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/O_profile_textEmail" />

            <EditText
                android:id="@+id/O_profile_textPhone"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
...
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="Email:"
                android:textColor="@color/dark_purple"
                android:textSize="20sp"
...

            <Button
                android:id="@+id/O_profile_updateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_purple"
                android:text="Update"
                android:textColor="@color/light_purple"
                android:visibility="gone"
...
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:text="Facility"
                    android:textColor="@color/dark_purple"
                    android:textSize="22sp"
...

                <ImageView
                    android:id="@+id/O_profile_facilityImg"
                    android:layout_width="300dp"
                    android:layout_height="220dp"
...
                    android:fontFamily="@font/roboto_mono_medium"
                    android:inputType="textPostalAddress"
                    android:text="Facility Name:"
                    android:textColor="@color/dark_purple"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/O_Profile_facilityUploadImagebtn" />

                <EditText
                    android:id="@+id/O_Profile_facilityNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
...
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:text="Facility Location:"
                    android:textColor="@color/dark_purple"
                    android:textSize="20sp"
...

                <EditText
                    android:id="@+id/O_Profile_facilityLocationText"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
...
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                android:id="@+id/O_create_facility_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_purple"
                android:text="Create Facility"
                android:textColor="@color/light_purple"
                app:layout_constraintStart_toStartOf="parent"
...
